# DHMT

./: CMakeLists.txt  delaunator.hpp  input.txt  main.cpp  sample_points.txt
